Revision history for Perl application Lstu

0.07 ?
	- Add logo

0.06 Fri Sep 04 11:47:00 2015 +0200
	- Add Spamhaus checking before accepting the URL
	- Fix small bug

0.05 Fri Jul 31 10:11:00 2015 +0200
	- Add copy-to-clipboard button (#1)
	- Add test suite
	- Add Net::Domain::TLD >= 1.73 as dependancy

0.04 Wed Jun 10 23:47:00 2015 +0200
	- Change internationalization system (.po files now)
	- Fixed domain for shortened URLs system (#12)
	- Fix XSS vulnerability (#15)
	- Subdirectory mounting system (#16)
	- Show your URLs ("stats") page
	- Show all URLs page for admin (#11)
	- API description page
	- API change
	- Self-documented configuration template
	- add doc and templates for systemd and sysVinit
	- add template for nginx

0.03 Wed Sep 25 16:18:00 2013 +0200
	- FIX #5 again by using transactions

0.02 Tue Sep 24 21:51:00 2013 +0200
	- use of morbo or hypnotoad servers availables
	- use of config file
	- FIX #1 : GET parameters deleted when using /a/*url route
	- FIX #2 : Can't use morbo or hypnotoad
	- FIX #3 : Internationalization
	- FIX #5 : Scalability issues

0.01 Sat Sep 21 02:47:59 2013 +0200
	- original version;