@@ -1,8 +1,24 @@
+# vim:set sw=4 ts=4 sts=4 ft=perl expandtab:
 package LstuModel;
+use Mojolicious;
+use FindBin qw($Bin);
+use File::Spec::Functions;
+
+BEGIN {
+    my $m = Mojolicious->new;
+    our $config = $m->plugin('Config' =>
+        {
+            file    => catfile($Bin, '..' ,'lstu.conf'),
+            default => {
+                db_path => 'lstu.db'
+            }
+        }
+    );
+}
 
 # Create database
 use ORLite {
-      file    => 'lstu.db',
+      file    => $config->{db_path},
       unicode => 1,
       create  => sub {
           my $dbh = shift;
@@ -14,7 +30,7 @@ use ORLite {
                timestamp INTEGER)'
           );
           return 1;
-        }
+     }
 };
 
 1;
